Clean up after Harrison
Dammit Harrison

--- a/OwnersManual/biblio.tex
+++ b/OwnersManual/biblio.tex
@@ -4,6 +4,9 @@
 Alpha \& Omega Semiconductor, ``AOD417 P-Channel Enhancement Mode Field Effect Transistor,''
 AOD417 datasheet, 2008. \url{http://aosmd.com/pdfs/datasheet/AOD417.pdf}
 
+\bibitem{pygubu}
+A. Autalan, ``pygubu,'' software library. \url{https://github.com/alejandroautalan/pygubu}
+
 \bibitem{tranckts-sawtooth}
 S. W. Amos and M. James, ``Sawtooth generators,'' in
 \emph{Principles of Transistor Circuits}, 9th ed. Oxford: Newnes, 2003, ch. 14, pp. 281--292.
