--- a/OwnersManual/too/software.tex
+++ b/OwnersManual/too/software.tex
@@ -21,4 +21,6 @@ To ensure proper signal processing you would need to interface with the AD9958 D
 \subsubsection{Calibration}
 \subsection{User Interface}
 
-The basic framework of the interface is created using the python Tkinter library. The user interface is created using the grid format with two simple buttons: CALIBRATE which receives the two bounds specified by the user  Min and Max frequency values entered through the entry boxes and PLOT which either displays a linear or phase plot as specified by the user. In order to build the User Interface the pygubu library is required for installation which can be found at the following link:https://github.com/alejandroautalan/pygubu (note to motherfuckin author we need to Cite this). This is a python GUI builder that was implemented in order to obtain the current layout. As well as the other libraries in the gui repository
+The basic framework of the interface is created using the python Tkinter library. The user interface is created using the grid format with two simple buttons: CALIBRATE which receives the two bounds specified by the user  Min and Max frequency values entered through the entry boxes and PLOT which either displays a linear or phase plot as specified by the user.
+The user interface makes use of the `pygubu' library~\cite{pygubu}.
+This is a Python GUI builder that was implemented in order to obtain the current layout. As well as the other libraries in the gui repository
