Update to getting started guide

--- a/OwnersManual/getting_started/getting_started.tex
+++ b/OwnersManual/getting_started/getting_started.tex
@@ -22,21 +22,10 @@ Output port sends signals to the filter.
 
 
 \section{Setting up your device}
-\begin{center}
-\missingfigure[figwidth=4in]{Photo}
-\end{center}
 
-First begin by connecting a filter to the board.  Connections for the filter must be made between the Output Port and Input Port.  The above figure shows us connecting a wire to the board.  You can do this as well just for learning purposes, but keep in mind that you will normally want to place a between these two ports.
-
-\begin{center}
-\missingfigure[figwidth=4in]{Photo}
-\end{center}
+First begin by connecting a filter to the board.  Connections for the filter must be made between the Output Port and Input Port.
 
 Now, we will connect the device to a PC using a micro USB cable.  Place one side of the cable into the USB port and the other side into any USB port on your PC.
-
-\begin{center}
-\missingfigure[figwidth=4in]{Photo}
-\end{center}
 
 Now, we will provide power to the device.  Plug the power supply into the Power port as shown in the diagram.
 
@@ -46,7 +35,7 @@ Excellent job.  Now we move to the computer where we can take a measurement and 
 Go ahead and run the gain/phase analyser application (RenAndStim.py)
 
 \begin{center}
-\missingfigure[figwidth=4in]{Photo}
+\missingfigure[figwidth=4in]{getting_start/gui}
 \end{center}
 
 Before actually executing analysis, it is important to set the minimum and maximum frequencies to test.  These numbers are always
