--- a/OwnersManual/getting_started/getting_started.tex
+++ b/OwnersManual/getting_started/getting_started.tex
@@ -35,7 +35,7 @@ Excellent job.  Now we move to the computer where we can take a measurement and 
 Go ahead and run the gain/phase analyser application (RenAndStim.py)
 
 \begin{center}
-\missingfigure[figwidth=4in]{getting_start/gui}
+\includegraphics[width=4in]{getting_started/gui}
 \end{center}
 
 Before actually executing analysis, it is important to set the minimum and maximum frequencies to test.  These numbers are always
